add other blocks

--- a/index.html
+++ b/index.html
@@ -125,27 +125,24 @@
 <span id="best" class="section"></span><div class="choose">
     <h3 class="title">подробности о часах</h3>
     <div class="choose_in">
-        <div class="choose__video-block">
-            <div class="choose__video-block--left">
-                <a href="#">
-                      <span class="video__img">
-                          <span class="video__play">посмотрите<br />видео обзор</span>
-                          <img src="img/watch2.jpg" alt="video"/>
+        <div class="choose__block">
+            <div class="choose__block--left">
+                      <div class="choose__img">
+                          <img src="img/choose_watch.jpg" alt="video"/>
 
-                      </span>
-                </a>
+                      </div>
 
             </div>
-            <div class="choose__video-block--right">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Aliquam vel hendrerit ante. Nulla vestibulum est ut risus sagittis venenatis.
-                    Etiam mollis lobortis sollicitudin. Etiam luctus tincidunt libero ut feugiat.
-                    Vestibulum ut mauris vitae ex laoreet placerat vel sed urna.
-                    Cras elementum sapien at ante aliquet pulvinar. Vivamus ac feugiat ex.
-                    Donec hendrerit dapibus fermentum.
-                    Sed sed dictum lectus, non ornare urna.
-                    Donec aliquam purus arcu, sed fermentum magna efficitur </p>
-                <a class="button button--wide" href="#">заказать сейчас</a>
+            <div class="choose__block--right">
+                <p>Марку Emporio Armani не нужно представлять –
+                    во всем мире бренд Armani считается эталоном
+                    изысканного вкуса и роскоши.</p>
+                <p>Armani – это своеобразный пропуск в мир богатства
+                    и признанного успеха. Часы Emporio Armani
+                    подойдут как к классическим костюмам, так и к джинсам.</p>
+                <p>В офисе часы от бренда Emporio Armani прекрасно
+                    смотрятся с деловым костюмом, а в выходной
+                    день модель отлично подойдет к стилю Casual.</p>
             </div>
 
         </div>
@@ -153,81 +150,123 @@
 </div>
 
 <span id="faq" class="section"></span><div class="specs">
-    <h2 class="title">характеристики часов</h2>
+    <h2 class="title">технические характеристики</h2>
     <div class="specs_in">
-        <div class="specs__items">
-            <div class="specs__item">
-                <h3>материал корпуса</h3>
-                <hr/>
-                <h4>нержавеющая сталь</h4>
-            </div>
-            <div class="specs__item">
-                <h3>материал браслета</h3>
-                <hr/>
-                <h4>кожа</h4>
-            </div>
-            <div class="specs__item">
-                <h3>тип механизма</h3>
-                <hr/>
-                <h4>кварц</h4>
-            </div>
-            <div class="specs__item">
-                <h3>калибр механизма</h3>
-                <hr/>
-                <h4>G10.211</h4>
-            </div>
+        <ul class="specs__items">
+            <li class="specs__item">Модель: <span>Armani AR0386</span></li>
+            <li class="specs__item">Водозащита: <span>150 м. (600 футов)</span></li>
+            <li class="specs__item">Толщина: <span>10мм.</span></li>
+            <li class="specs__item">Диаметр: <span>40 мм.</span></li>
+            <li class="specs__item">Материал: <span>нержавеющая сталь</span></li>
+            <li class="specs__item">Механизм: <span>кварц</span></li>
+            <li class="specs__item">Ремешок: <span>лакированная кожа</span></li>
+            <li class="specs__item">Цвет ремешка: <span>черный</span></li>
+            <li class="specs__item">Цвет циферблата: <span>белый</span></li>
+            <li class="specs__item">Застежка: <span>пряжка</span></li>
+        </ul>
 
-        </div>
+        <ul class="specs__items">
+            <li class="specs__item">Стекло: <span>минеральное</span></li>
+            <li class="specs__item">Хронограф: <span>есть</span></li>
+            <li class="specs__item">Отображение даты: <span>число</span></li>
+            <li class="specs__item">Другие функции: <span>секундомер</span></li>
+            <li class="specs__item">Подсветка: <span>стрелок</span></li>
+            <li class="specs__item">Источник энергии: <span>батарейка</span></li>
+            <li class="specs__item">Цифры: <span>отсутствуют</span></li>
+            <li><a href="#" class="button button--red">купить</a></li>
+        </ul>
 
-        <div class="specs__items">
-            <div class="specs__item">
-                <h3>тип стекла</h3>
-                <hr/>
-                <h4>сапфировое стекло</h4>
-            </div>
-            <div class="specs__item">
-                <h3>вид циферблата</h3>
-                <hr/>
-                <h4>Араб Дел</h4>
-            </div>
-            <div class="specs__item">
-                <h3>Водостойкость</h3>
-                <hr/>
-                <h4>3 bar (30 m / 100 ft)</h4>
-            </div>
-            <div class="specs__item">
-                <h3>цвет циферблата</h3>
-                <hr/>
-                <h4>белый</h4>
-            </div>
-
-        </div>
         <div class="specs__watch">
             <div class="specs__text-degree">
-                <span>обзор<br />360°</span>
+                <span class="text-degree">обзор<br />на<span>360°</span></span>
                 <p>используйте мышку
                     для управления просмотром</p>
             </div>
-            <img src="img/watch3.png" alt="watch"/>
+            <img src="img/specs_watch.jpg" alt="watch"/>
 
 
             <div class="prev"></div>
             <div class="next"></div>
         </div>
-        <div class="specs__small">
-            <ul>
-                <li class="first">90 грамм</li>
-                <li class="second">42.5 мм</li>
-                <li class="third">42.5 мм</li>
-                <li class="fourth">10.57 мм</li>
-            </ul>
+
+    </div>
+</div>
+
+    <span id="delivery" class="section"></span><div class="our">
+    <h2 class="title">наши преимущества</h2>
+    <div class="our_in">
+        <div class="our_left">
+            <div class="our_delivery">Доставка по всей России</div>
+        </div>
+        <div class="our_right">
+            <div class="our_item">
+                <div class="our_img"><img src="img/list_ico1.png" alt=""/></div>
+                <p>Лучшие цены на рынке РФ и
+                    никаких предоплат</p>
+            </div>
+            <div class="our_item">
+                <div class="our_img"><img src="img/list_ico2.png" alt=""/></div>
+                <p>Круглосуточная поддержка для наших клиентов</p>
+            </div>
         </div>
     </div>
 </div>
 
 
+    <div class="order">
+        <h2 class="title">с этим товаром покупают</h2>
+        <div class="order_in">
+            <div class="order__item">
+                <div class="order__caption">TISSOT COUTURIER QUARTZ</div>
+                <div class="order__img"><img src="img/watch_img1.jpg" alt="watch"/></div>
+                <div class="order__price">
+                    <h3>Цена: <span>2599 руб.</span></h3>
+                    <h4>990 <span>руб.</span></h4>
+                </div>
+                <div class="order__form">
+                    <form id ="form2" action="#" method="post">
+                        <input type="text" name="name" class="name required" placeholder="Введите Ваше имя">
+                        <input type="text" name="phone" class="phone required" placeholder="Введите Ваш номер телефона">
+                        <button class="button button--yellow">купить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="order__item">
+                <div class="order__caption">TISSOT COUTURIER QUARTZ</div>
+                <div class="order__img"><img src="img/watch_img1.jpg" alt="watch"/></div>
+                <div class="order__price">
+                    <h3>Цена: <span>2599 руб.</span></h3>
+                    <h4>990 <span>руб.</span></h4>
+                </div>
+                <div class="order__form">
+                    <form id ="form3" action="#" method="post">
+                        <input type="text" name="name" class="name required" placeholder="Введите Ваше имя">
+                        <input type="text" name="phone" class="phone required" placeholder="Введите Ваш номер телефона">
+                        <button class="button button--yellow">купить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="order__item">
+                <div class="order__caption">TISSOT COUTURIER QUARTZ</div>
+                <div class="order__img"><img src="img/watch_img1.jpg" alt="watch"/></div>
+                <div class="order__price">
+                    <h3>Цена: <span>2599 руб.</span></h3>
+                    <h4>990 <span>руб.</span></h4>
+                </div>
+                <div class="order__form">
+                    <form id ="form4" action="#" method="post">
+                        <input type="text" name="name" class="name required" placeholder="Введите Ваше имя">
+                        <input type="text" name="phone" class="phone required" placeholder="Введите Ваш номер телефона">
+                        <button class="button button--yellow">купить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="reviews">
-        <h2 class="title">отзывы наших клиентов</h2>
+        <h2 class="title">отзывы наших покупателей</h2>
         <div class="reviews_in">
             <div class="review__item">
                 <h3>сергей иванович</h3>
@@ -258,78 +297,79 @@
 
         </div>
     </div>
-<div class="order">
-    <div class="order_in">
-      <div class="order__item">
-          <div class="order__caption">TISSOT COUTURIER QUARTZ</div>
-          <div class="order__img"><img src="img/watch_img1.jpg" alt="watch"/></div>
-          <div class="order__price">
-              <h3>Цена: <span>2599 руб.</span></h3>
-              <h4>990 <span>руб.</span></h4>
-          </div>
-          <div class="order__form">
-              <form id ="form2" action="#" method="post">
-                  <input type="text" name="name" class="name required" placeholder="Введите Ваше имя">
-                  <input type="text" name="phone" class="phone required" placeholder="Введите Ваш номер телефона">
-                  <button class="button">Заказать</button>
-              </form>
-          </div>
-      </div>
-        <div class="order__item">
-            <div class="order__caption">TISSOT COUTURIER QUARTZ</div>
-            <div class="order__img"><img src="img/watch_img2.jpg" alt="watch"/></div>
-            <div class="order__price">
-                <h3>Цена: <span>2599 руб.</span></h3>
-                <h4>990 <span>руб.</span></h4>
-            </div>
-            <div class="order__form">
-                <form id ="form3" action="#" method="post">
-                    <input type="text" name="name" class="name required" placeholder="Введите Ваше имя">
-                    <input type="text" name="phone" class="phone required" placeholder="Введите Ваш номер телефона">
-                    <button class="button">Заказать</button>
-                </form>
-            </div>
-        </div>
-        <div class="order__item">
-            <div class="order__caption">TISSOT COUTURIER QUARTZ</div>
-            <div class="order__img"><img src="img/watch_img3.jpg" alt="watch"/></div>
-            <div class="order__price">
-                <h3>Цена: <span>2599 руб.</span></h3>
-                <h4>990 <span>руб.</span></h4>
-            </div>
-            <div class="order__form">
-                <form id ="form4" action="#" method="post">
-                    <input type="text" name="name" class="name required" placeholder="Введите Ваше имя">
-                    <input type="text" name="phone" class="phone required" placeholder="Введите Ваш номер телефона">
-                    <button class="button">Заказать</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-    <span id="delivery" class="section"></span><div class="our">
-    <h2 class="title">наши преимущества</h2>
-    <div class="our_in">
-        <div class="our_left">
-            <div class="our_delivery">Доставка по всей России</div>
-        </div>
-        <div class="our_right">
-            <div class="our_item">
-                <div class="our_img"><img src="img/list_ico1.png" alt=""/></div>
-                <p>Лучшие цены на рынке РФ и
-                    никаких предоплат</p>
-            </div>
-            <div class="our_item">
-                <div class="our_img"><img src="img/list_ico2.png" alt=""/></div>
-                <p>Круглосуточная поддержка для наших клиентов</p>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 
 <div class="bottom">
+
+    <div class="logo"></div>
+    <h1 class="title">часы для настоящих мужчин</h1>
+
+    <div class="header__main--main">
+        <div class="header__main--main_in">
+            <div class="header__right">
+
+
+                <div class="form">
+                    <div class="caption">
+                        <h3>оформите заявку</h3>
+                        <h4>и купите часы по суперцене</h4>
+
+                    </div>
+                    <div class="counter">
+                        <p>до конца акции осталось:</p>
+
+                        <ul class="count_line">
+
+                            <li>
+                                <span class="h"></span>
+
+                                <p>часа</p>
+                            </li>
+
+                            <li>
+                                <span class="m"></span>
+
+                                <p>минут</p>
+                            </li>
+
+                            <li>
+                                <span class="s last"></span>
+
+                                <p>секунд</p>
+                            </li>
+
+                            <br class="cb">
+                        </ul>
+                    </div>
+                    <div class="frm" id="form5">
+                        <div class="price">9120<br /><span>рублей</span></div>
+                        <form action="#" method="post">
+                            <input type="text" name="name" class="name required" placeholder="Введите ваше имя">
+                            <input type="text" name="phone" class="phone required"
+                                   placeholder="Введите ваш номер телефона">
+                            <button class="button">купить</button>
+                            <div class="radio-toolbar">
+                                <p>выберите цвет:</p>
+                                <input type="radio" id="radio3" name="radios" value="brown" checked>
+                                <label for="radio3"><span class="input--first"></span></label>
+                                <input type="radio" id="radio4" name="radios" value="black">
+                                <label for="radio4"><span class="input--first input--second"></span></label>
+                            </div>
+                        </form>
+
+                    </div>
+
+
+
+                </div>
+
+
+            </div>
+            <div class="discount">-30<span>%</span></div>
+            <div class="watch"></div>
+
+        </div>
+    </div>
 
     </div>
 <footer>
